# roo-code-local

./: .gitignore  LICENSE  README.md  bootstrap.sh  docker-run.ps1  pyproject.toml  requirements.txt  start.ps1
core/bootstrap/: bootstrap.ps1
core/ci/: ci.rules.yaml  template_validator.py  validate_all.ps1
core/config/: buddy.yaml  llm.config.yaml  llm.registry.yaml  monitoring.yaml  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements-test.txt  requirements.txt
core/docker/: .env.docker  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  entrypoint.sh
core/history/: .gitkeep
core/modes/: mode.buddy.yaml  mode.transkriptor.yaml  spec.buddy.yaml  spec.transkriptor.yaml
core/modes/buddy/: buddy-flows.yaml
core/modes/intent-discovery/: mode.intent-discovery.yaml
core/modes/intent-mapper/: mode.intent-mapper.yaml  spec.intent-mapper.yaml
core/modes/validator/: mode.validator.yaml  spec.validator.yaml
core/modes/vocab-updater/: mode.vocab-updater.yaml
core/monitoring/: dashboard.html  monitor.py
core/templates/: template.agent-spec.yaml  template.buddy-flows.yaml  template.intent-suggestion.yaml  template.llm-config.yaml  template.mode.yaml  template.spec.yaml  template.vocab-entry.yaml
core/tests/: conftest.py  pytest_runner.ps1  requirements.txt  run_all.ps1
core/tests/agents/: test_mode_execution.py
core/tests/e2e/: test_docker_system.py
core/tests/integration/: test_buddy_flows.py  test_workflows.py
core/tests/structure/: test_templates.py  test_yaml_structure.py
core/tests/tools/: test_bootstrap_validation.py
core/tests/unit/: test_agent_modes.py
core/vocab/: vocab.history.yaml  vocab.yaml
docs/: README.md  core.md
docs/architecture/: overview.md
docs/components/: core.md  modules.md
docs/deployment/: docker.md
logs/: .gitkeep
modules/llm-admin/: cli.ps1  requirements.txt
modules/llm-admin/config/: active.example.yaml  active.template.yaml
modules/llm-admin/engines/: llama-cpp-run.ps1  transformers-run.ps1
modules/llm-admin/templates/: llm.config.template.yaml
modules/llm-admin/test/: test_registry.ps1
modules/llm-admin/tools/: download.ps1  generate-mode.ps1  start-api-server.ps1  yaml-helper.ps1
pim/: status.yaml
temp/: .gitkeep
